v0.6.1
	* Improve daemons
	* Add few functional tests and unitary tests
	* Improve Rakefile and tests structure

v0.6.0
	* Big change (ea49dfb0b429f03327447477bfee9bef30dda7ad) on the architecture, massive usage of Rack::Request, review the global architecture, update all unitary tests
	* add hook before_action and after_action
	* improve params
	* improve controller error handlement with STDERR message
	* server can be daemonized

v0.5
	* fix regression on empty response
	* add unitary tests
	* improve gemspec
	* fix severe regression on responder
	* fix environment bug
	* add continuous integration with gitlab
	* fix executables requirements to be testable
	* add cookies management
	* fix regression on content-type from v0.4
	* fix nephos gem (binaries can be used out of an application)
	* improve code documentation (annotations above the methods and classes)
	* fix content type for json to application/json
	* improve executables: version taking in count

v0.4
	* fix route matching
	* improve generator (help and display)
	* improve generator (usage of optparser)
	* improve documentation (and update)
	* change generator option --debug with --test
	* add lot of unitary tests on router
	* add test on application generator
	* add generator option (--no-build, --no-git, ...)
	* fix parameters
	* improve controller generator (names)
	* add puma to change the default web server
	* add environments
	* improve router errors
	* improve documentation (production mode)
	* add listen network parameter to run the server
	* fix server executable
	* improve errors
	* fix unitary tests about controller generator
	* improve gemspec changelog
	* improve generator
	* improve responder (with integer argument)
	* fix router helpers
	* add version to code
	* fix a file permissions
	* add generator route --rm
	* add test for generator (routes and route --rm)
	* improve routes generator with a 4th optional argument
	* fix regression for binary with --debug feature