@@ -1,7 +1,8 @@
 v0.6.1
 	* Improve daemons
-	* Add few functional tests and unitary tests
 	* Improve Rakefile and tests structure
+	* Add few functional (router, server, generator) tests
+	* Add new unitary tests
 
 v0.6.0
 	* Big change (ea49dfb0b429f03327447477bfee9bef30dda7ad) on the architecture, massive usage of Rack::Request, review the global architecture, update all unitary tests
